Change inchiKey to identifier; add hetgroup name
git-svn-id: svn://10.100.0.12/targetmine/targetmine_0_95@919 2b6e97ab-584e-0410-ac36-d0f4d4f06b57

--- a/bio/sources/targetmine/chebi-db/resources/chebi-db_keys.properties
+++ b/bio/sources/targetmine/chebi-db/resources/chebi-db_keys.properties
@@ -5,4 +5,4 @@ SOTerm.key = name, ontology
 Ontology.key = name
 #Publication.key = pubMedId
 ChebiCompound.key_chebiId = chebiId
-CompoundGroup.key_inchiKey = inchiKey
+CompoundGroup.key_inchiKey = identifier
