--- a/bio/sources/targetmine/drugbank/resources/drugbank_keys.properties
+++ b/bio/sources/targetmine/drugbank/resources/drugbank_keys.properties
@@ -3,7 +3,7 @@ Drug.key_drugbankid=drugBankId
 HetGroup.key_hetId=hetId
 PubChemCompound.key_pubChemCid = pubChemCid
 ChebiCompound.key_chebiId = chebiId
-CompoundGroup.key_inchiKey = inchiKey
+CompoundGroup.key_inchiKey = identifier
 DataSet.key = name
 DataSource.key = name
 SOTerm.key = name, ontology
