--- a/bio/sources/targetmine/ligand_expo/resources/ligand_expo_keys.properties
+++ b/bio/sources/targetmine/ligand_expo/resources/ligand_expo_keys.properties
@@ -6,4 +6,4 @@ Ontology.key = name
 ProteinStructure.key_pdbId=pdbId
 #Publication.key = pubMedId
 HetGroup.key_hetId=hetId
-CompoundGroup.key_inchiKey = inchiKey
+CompoundGroup.key_inchiKey = identifier
