--- a/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
@@ -350,13 +350,13 @@ SubmissionProperty=A property of the modENCODE submission.
 
 # Class field descriptions
 
-Gene.secondaryIdentifier=Any identifier, other than the main organism genome database identifier, which \
-is commonly used to identify a gene (for example, the Drosophila CG identifier). See 'Synonyms' \
-for other gene names and identifiers for this gene.<p>\
+#Gene.secondaryIdentifier=Any identifier, other than the main organism genome database identifier, which \
+#is commonly used to identify a gene (for example, the Drosophila CG identifier). See 'Synonyms' \
+#for other gene names and identifiers for this gene.<p>\
 
-Gene.primaryIdentifier=The main identifier used by the organisms main genome database. \
-For example, the FBgn identifier assigned by FlyBase or the WBGene identifier assigned by WormBase. \
-See 'Synonyms' for other gene names and identifiers for this gene.<p>\
+#Gene.primaryIdentifier=The main identifier used by the organisms main genome database. \
+#For example, the FBgn identifier assigned by FlyBase or the WBGene identifier assigned by WormBase. \
+#See 'Synonyms' for other gene names and identifiers for this gene.<p>\
 
 Gene.name=The gene symbol or common name. For most organisms this will be an officially assigned \
 symbol/name (for example, the FlyBase gene symbol or the CGC-approved gene name for C. elegans). \
@@ -427,3 +427,63 @@ The possibilities are:<p>\
 <p>\
 See the <a href="http://www.geneontology.org/GO.evidence.shtml">GO website for more details</a>
 
+
+# Start of Additional definitions for TargetMine
+
+# Class definitions
+Drug=Any substance that, when absorbed into the body of a living organism, alters normal bodily function.
+ProteinHomolog=Homologous relationship from one protein (protein reference) to another (homolog). Data were made by utilizing KEGG ORTHOLOGY database. 
+Enzyme=Proteins that catalyze chemical reactions.
+CompoundGroup=A group of compounds from different data sources which share the same molecular skeleton.
+ChebiCompound=A compound in CHEBI database.
+PubChemCompound=A compound in PubChem database.
+BindingSiteInfo=Transcription factor binding site information.
+Compound=A pure chemical substance.
+CompoundGroupInteraction=An interaction between a Protein and a CompoundGroup.
+DOAnnotation=Disease Ontology annotation for a gene.
+DOTerm: A term from the Disease Ontology.
+DrugProteinInteraction=An interaction between a Protein and a Drug.
+DrugType=The type of a drug, could be 'Approved', 'Biotech', 'Investigational', ...etc.
+GeneRIF=A reference for DOAnnotation from a GeneRIF record.
+HetGroup=A het atom using by PDB.
+ProteinChain=A chain in a protein(PDB) structure.
+ProteinDNAInteraction=An interaction between a Protein and a DNA.
+ProteinDNAExperiment=The experiment in which a protein-DNA interaction was determined.
+ProteinDomainRegion=Define the region in a Protein of certain domain.
+ProteinInteraction=A protein-protein interaction.
+ProteinInteractionSource=The original data source of a protein-protein interaction.
+PDBRegion=The region of a PDB structure. 
+ProteinStructureRegion=Define the corresponding region in a Protein of a PDB structure.
+StitchInteraction=A protein-chemical interaction from STITCH database.
+ScopClassification=Structural classification of proteins.
+ScopClass=A class used in SCOP classifiaction.
+ScopFold=A fold defined in SCOP classifiaction.
+ScopSuperFamily=A superfamily defined in SCOP classifiaction.
+ScopFamily=A family defined in SCOP classifiaction.
+ScopDomain=A domain defined in SCOP classifiaction.
+ScopSpecies=A species in SCOP classifiaction.
+ScopProtein=A protein in SCOP classifiaction.
+ScopRegion=Define the region in a Protein of a SCOP classification.
+
+# Field definitions
+ProteinHomolog.koNumber=KEGG ORTHOLOGY identifier
+ProteinHomolog.type=Type of homologous relationship. Either ortholog or paralog
+ProteinHomolog.source=Source protein. ProteinHomolog class stands for homologous relationship of this source protein.
+ProteinHomolog.homolog=A homologous protein for a source protein
+
+ProteinInteraction=A relation between two proteins which have been shown to be related through a physical interaction.
+ProteinInteractionSource=Data source of the PPI information.
+
+Gene.primaryIdentifier=The main identifier. In TargetMine, it equals to Ensembl id.
+Gene.secondaryIdentifier=The identifier, other than the primary identifier, which is commonly used to identify a gene for specific organism. \
+In TargetMine, HGNC id for human; RGD for rat; MGI for mouse. 
+Gene.ncbiGeneNumber=Entrez Gene identifier.
+
+Disease.status=C = confirmed - observed in at least two laboratories or in several families. <br/> \
+P = provisional - based on evidence from one laboratory or one family. <br/> \
+I = inconsistent - results of different laboratories disagree. <br/> \
+L = limbo - evidence not as strong as that provisional, but included for heuristic reasons. (Same as 'tentative'.)
+
+CompoundGroup.identifier=first 14 characters of the InChIKey
+
+# End of Additional definitions for TargetMine
