--- a/bio/sources/targetmine/pubchem/resources/pubchem_keys.properties
+++ b/bio/sources/targetmine/pubchem/resources/pubchem_keys.properties
@@ -5,4 +5,4 @@ SOTerm.key = name, ontology
 Ontology.key = name
 #Publication.key = pubMedId
 PubChemCompound.key_pubChemCid = pubChemCid
-CompoundGroup.key_inchiKey = inchiKey
+CompoundGroup.key_inchiKey = identifier
