intermine v0.98, second part
git-svn-id: svn://10.100.0.12/targetmine/targetmine_0_95@922 2b6e97ab-584e-0410-ac36-d0f4d4f06b57

--- a/flymine/dbmodel/resources/genomic_priorities.properties
+++ b/flymine/dbmodel/resources/genomic_priorities.properties
@@ -6,6 +6,8 @@
 
 BioEntity.organism = \
   *, \
+  drosophila-homology, \
+  uniprot, \
   ensembl, \
   go-annotation, \
   bdgp-insitu, \
@@ -13,22 +15,28 @@ BioEntity.organism = \
   reactome-curated, \
   pdb
 
-Gene.name = \
-  chado-db-flybase-dmel, \
-  chado-db-flybase-dpse, \
-  *
+Gene.name = chado-db-flybase-dmel, chado-db-flybase-dpse, chado-db-flybase-others, ncbi-gene,  *
 
 Gene.primaryIdentifier = \
   chado-db-flybase-dmel, \
   chado-db-flybase-dpse, \
+  chado-db-flybase-others,\
   wormbase-identifiers, \
+  mgi-identifiers, \
+  rgd-identifiers, \
+  ensembl-hgnc, \
   uniprot, \
   *
 
 Gene.symbol = \
   chado-db-flybase-dmel, \
   chado-db-flybase-dpse, \
+  chado-db-flybase-others,\
   wormbase-identifiers, \
+  mgi-identifiers, \
+  rgd-identifiers, \
+  ncbi-gene, \
+  ensembl-hgnc, \
   uniprot, \
   flyreg, \
   *
@@ -37,15 +45,14 @@ Protein.primaryIdentifier = \
   uniprot, \
   chado-db-flybase-dmel, \
   chado-db-flybase-dpse, \
+  chado-db-flybase-others,\
   *
 
 Protein.name = \
   uniprot, \
   *
 
-Protein.primaryAccession = \
-  uniprot, \
-  *
+Protein.primaryAccession = uniprot, *
 
 ProteinDomain.shortName = \
   interpro,\
@@ -59,13 +66,18 @@ ProteinDomain.name = \
 BioEntity.secondaryIdentifier = \
   chado-db-flybase-dmel, \
   chado-db-flybase-dpse, \
+  chado-db-flybase-others,\
   wormbase-identifiers, \
+  mgi-identifiers, \
+  rgd-identifiers, \
+  ncbi-gene, \
   uniprot, \
- *
+  *
 
 Chromosome.sequence = \
   chado-db-flybase-dmel, \
   chado-db-flybase-dpse, \
+  chado-db-flybase-others,\
   *
 
 Gene.sequence = \
@@ -73,12 +85,10 @@ Gene.sequence = \
   flybase-dpse-gene-fasta, \
   chado-db-flybase-dmel, \
   chado-db-flybase-dpse, \
+  chado-db-flybase-others,\
   *
 
-Protein.sequence = \
-  uniprot-fasta, \
-  uniprot, \
-  *
+Protein.sequence = uniprot-fasta, uniprot, *
 
 SequenceFeature.length = \
   flybase-dmel-gene-fasta, \
