--- a/bio/sources/biogrid/main/resources/biogrid_config.properties
+++ b/bio/sources/biogrid/main/resources/biogrid_config.properties
@@ -9,7 +9,7 @@
 # 	<primaryRef db="FLYBASE" id="FBgn001" />
 #
 # ---------------------------------------------------
-#  
+#
 #	* shortLabel
 # To set your gene.identifier to be the shortLabel in the biogrid XML, use this config:
 #
@@ -17,8 +17,8 @@
 #
 #	* xref
 # To set your gene.identifier field to be a value from an xref entry, use this syntax:
-#  <TAXON_ID>.xref.<GENE_IDENTIFIER_FIELD> = <XREF_DB_VALUE> 
-#  
+#  <TAXON_ID>.xref.<GENE_IDENTIFIER_FIELD> = <XREF_DB_VALUE>
+#
 #
 # xref "db" value is not case sensitive, case seems to vary from file to file.
 #
@@ -31,6 +31,7 @@
 
 # yeast
 4932.xref.primaryIdentifier = SGD
+4932.strain = 559292
 
 # rat
 10116.xref.ncbiGeneNumber = entrez gene/locuslink
