--- a/targetmine/dbmodel/resources/genomic_keyDefs.properties
+++ b/targetmine/dbmodel/resources/genomic_keyDefs.properties
@@ -17,7 +17,7 @@ Publication.key_pubmed = pubMedId
 DataSet.key_title = name
 DataSource.key_name = name
 Location.key_all = locatedOn, feature, end, start, strand
-Comment.key_comment = text, type
+#Comment.key_comment = text, type
 ProteinDomain.key_identifier = primaryIdentifier
 Exon.key_primaryidentifier = primaryIdentifier
 Chromosome.key_primaryidentifier = primaryIdentifier
