--- a/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
@@ -434,7 +434,7 @@ See the <a href="http://www.geneontology.org/GO.evidence.shtml">GO website for m
 
 # Class definitions
 Drug=Any substance that, when absorbed into the body of a living organism, alters normal bodily function.
-ProteinHomolog=Homologous relationship from one protein (protein reference) to another (homolog). Data were made by utilizing KEGG ORTHOLOGY database. 
+#ProteinHomolog=Homologous relationship from one protein (protein reference) to another (homolog). Data were made by utilizing KEGG ORTHOLOGY database. 
 Enzyme=Proteins that catalyze chemical reactions.
 CompoundGroup=A group of compounds from different data sources which share the same molecular skeleton.
 ChebiCompound=A compound in CHEBI database.
@@ -466,12 +466,16 @@ ScopDomain=A domain defined in SCOP classifiaction.
 ScopSpecies=A species in SCOP classifiaction.
 ScopProtein=A protein in SCOP classifiaction.
 ScopRegion=Define the region in a Protein of a SCOP classification.
+CathClassification=CATH is a manually curated classification of protein domain structures.
+GenomeWideAssociation=Annotations from the genome-wide association studies.
+ScopEntry=The terms used in SCOP hierarchy. Could be a ScopClass, ScopFold, ScopSuperFamily, ScopFamily, ScopDomain, ScopSpecies or ScopProtein.
+StructuralDomainRegion=The regions of the annotated structural classification.
 
 # Field definitions
-ProteinHomolog.koNumber=KEGG ORTHOLOGY identifier
-ProteinHomolog.type=Type of homologous relationship. Either ortholog or paralog
-ProteinHomolog.source=Source protein. ProteinHomolog class stands for homologous relationship of this source protein.
-ProteinHomolog.homolog=A homologous protein for a source protein
+#ProteinHomolog.koNumber=KEGG ORTHOLOGY identifier
+#ProteinHomolog.type=Type of homologous relationship. Either ortholog or paralog
+#ProteinHomolog.source=Source protein. ProteinHomolog class stands for homologous relationship of this source protein.
+#ProteinHomolog.homolog=A homologous protein for a source protein
 
 ProteinInteraction=A relation between two proteins which have been shown to be related through a physical interaction.
 ProteinInteractionSource=Data source of the PPI information.
@@ -487,5 +491,6 @@ I = inconsistent - results of different laboratories disagree. <br/> \
 L = limbo - evidence not as strong as that provisional, but included for heuristic reasons. (Same as 'tentative'.)
 
 CompoundGroup.identifier=first 14 characters of the InChIKey
+CathClassification.cathCode=corresponds to a node in the CATH structural hierarchy
 
 # End of Additional definitions for TargetMine
