--- a/bio/webapp/resources/webapp/WEB-INF/bioClassNames.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/bioClassNames.properties
@@ -10,3 +10,9 @@ RNAiResult=RNAi Result
 RNAiScreenHit=RNAi Screen Hit
 RNAiScreen=RNAi Screen
 UniProtFeature=UniProt Feature
+GeneRIF=GeneRIF
+PubChemCompound=PubChem Compound
+ChebiCompound=ChEBI Compound
+ScopEntry=SCOP Entry
+ScopRegion=SCOP Region
+CathClassification=CATH Classification
