--- a/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
@@ -437,7 +437,7 @@ Drug=Any substance that, when absorbed into the body of a living organism, alter
 #ProteinHomolog=Homologous relationship from one protein (protein reference) to another (homolog). Data were made by utilizing KEGG ORTHOLOGY database. 
 Enzyme=Proteins that catalyze chemical reactions.
 CompoundGroup=A group of compounds from different data sources which share the same molecular skeleton.
-ChebiCompound=A compound in CHEBI database.
+ChebiCompound=A compound in ChEBI database.
 PubChemCompound=A compound in PubChem database.
 BindingSiteInfo=Transcription factor binding site information.
 Compound=A pure chemical substance.
@@ -457,18 +457,18 @@ ProteinInteractionSource=The original data source of a protein-protein interacti
 PDBRegion=The region of a PDB structure. 
 ProteinStructureRegion=Define the corresponding region in a Protein of a PDB structure.
 StitchInteraction=A protein-chemical interaction from STITCH database.
-ScopClassification=Structural classification of proteins.
-ScopClass=A class used in SCOP classifiaction.
-ScopFold=A fold defined in SCOP classifiaction.
-ScopSuperFamily=A superfamily defined in SCOP classifiaction.
-ScopFamily=A family defined in SCOP classifiaction.
-ScopDomain=A domain defined in SCOP classifiaction.
-ScopSpecies=A species in SCOP classifiaction.
-ScopProtein=A protein in SCOP classifiaction.
+#ScopClassification=Structural classification of proteins.
+#ScopClass=A class used in SCOP classifiaction.
+#ScopFold=A fold defined in SCOP classifiaction.
+#ScopSuperFamily=A superfamily defined in SCOP classifiaction.
+#ScopFamily=A family defined in SCOP classifiaction.
+#ScopDomain=A domain defined in SCOP classifiaction.
+#ScopSpecies=A species in SCOP classifiaction.
+#ScopProtein=A protein in SCOP classifiaction.
 ScopRegion=Define the region in a Protein of a SCOP classification.
 CathClassification=CATH is a manually curated classification of protein domain structures.
 GenomeWideAssociation=Annotations from the genome-wide association studies.
-ScopEntry=The terms used in SCOP hierarchy. Could be a ScopClass, ScopFold, ScopSuperFamily, ScopFamily, ScopDomain, ScopSpecies or ScopProtein.
+ScopEntry=The terms used in SCOP hierarchy. Could be a Class, a Fold, a SuperFamily, a Family, a Domain, a Species or a Protein.
 StructuralDomainRegion=The regions of the annotated structural classification.
 
 # Field definitions
