--- a/bio/webapp/resources/webapp/WEB-INF/bioFieldNames.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/bioFieldNames.properties
@@ -25,3 +25,8 @@ uniprotAccession=UniProt Accession
 uniprotName=UniProt Name
 url=URL
 UTRs=UTRs
+pdbRegion=PDB Region
+pdbRegions=PDB Regions
+scopRegions=SCOP Regions
+scopClassification=SCOP Classification
+cathClassification=CATH Classification
