git-svn-id: svn://10.100.0.12/targetmine/targetmine_0_95@945 2b6e97ab-584e-0410-ac36-d0f4d4f06b57

--- a/bio/webapp/resources/webapp/WEB-INF/bioClassNames.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/bioClassNames.properties
@@ -16,3 +16,5 @@ ChebiCompound=ChEBI Compound
 ScopEntry=SCOP Entry
 ScopRegion=SCOP Region
 CathClassification=CATH Classification
+#to be removed
+CompoundGroupInteraction=Protein-CompoundGroup Interaction
