Modified gene_info parser to tag micro RNA; Modified so perl script; Changed external link settings for pathway.
git-svn-id: svn://10.100.0.12/targetmine/targetmine_0_95@949 2b6e97ab-584e-0410-ac36-d0f4d4f06b57

--- a/bio/sources/targetmine/stitch/resources/stitch_keys.properties
+++ b/bio/sources/targetmine/stitch/resources/stitch_keys.properties
@@ -3,6 +3,6 @@ DataSource.key = name
 SOTerm.key = name, ontology
 Organism.key = taxonId
 Ontology.key = name
-Compound.key_chebiId = chebiId
+ChebiCompound.key_chebiId = chebiId
 Protein.key_primaryIdentifier = primaryIdentifier
 PubChemCompound.key_pubChemCid = pubChemCid
