--- a/bio/webapp/resources/webapp/WEB-INF/bioFieldNames.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/bioFieldNames.properties
@@ -30,3 +30,4 @@ pdbRegions=PDB Regions
 scopRegions=SCOP Regions
 scopClassification=SCOP Classification
 cathClassification=CATH Classification
+pubChemCid=PubChem CID45
