--- a/bio/sources/targetmine/ligand_expo/resources/ligand_expo_keys.properties
+++ b/bio/sources/targetmine/ligand_expo/resources/ligand_expo_keys.properties
@@ -5,5 +5,5 @@ Ontology.key = name
 #Organism.key = taxonId
 ProteinStructure.key_pdbId=pdbId
 #Publication.key = pubMedId
-HetGroup.key_hetId=hetId
+PDBCompound.key_hetId=hetId
 CompoundGroup.key_inchiKey = identifier
