--- a/targetmine/dbmodel/resources/genomic_priorities.properties
+++ b/targetmine/dbmodel/resources/genomic_priorities.properties
@@ -84,8 +84,9 @@ Synonym.subject = \
   *
 
 CompoundGroup.name = \
-  chebi-db, \
+  chebi, \
   drugbank, \
+  chembl, \
   pubchem, \
   ligand_expo, \
   *
