--- a/bio/sources/targetmine/drugbank/project.properties
+++ b/bio/sources/targetmine/drugbank/project.properties
@@ -4,5 +4,5 @@ compile.dependencies = intermine/objectstore/main,bio/core/main,\
 
 have.file.custom.tgt = true
 
-converter.class = org.intermine.bio.dataconversion.DrugBankConverter
+converter.class = org.intermine.bio.dataconversion.DrugBankXmlConverter
 postprocessor.class = org.intermine.bio.postprocess.DrugBankPostProcess
