--- a/bio/sources/targetmine/drugbank/resources/drugbank_keys.properties
+++ b/bio/sources/targetmine/drugbank/resources/drugbank_keys.properties
@@ -1,12 +1,9 @@
 Protein.key_primaryacc=primaryAccession
-Drug.key_drugbankid=drugBankId
-HetGroup.key_hetId=hetId
-PubChemCompound.key_pubChemCid = pubChemCid
-ChebiCompound.key_chebiId = chebiId
+DrugCompound.key_drugbankid=drugBankId
 CompoundGroup.key_inchiKey = identifier
 DataSet.key = name
 DataSource.key = name
 SOTerm.key = name, ontology
 Organism.key = taxonId
 Ontology.key = name
-
+DrugType.key = name
