New compound model; External links for multiple data sources in enrichment widget; Move customized sources to targetmine folder (uniprot, go-annotation); Fix for GoPostporcess.java
git-svn-id: svn://10.100.0.12/targetmine/targetmine_0_95@961 2b6e97ab-584e-0410-ac36-d0f4d4f06b57

--- a/bio/sources/targetmine/tm-uniprot/main/resources/uniprot_config.properties
+++ b/bio/sources/targetmine/tm-uniprot/main/resources/uniprot_config.properties
@@ -45,92 +45,29 @@ default.primaryIdentifier.dbref = Ensembl
 # dmel
 7227.uniqueField = primaryIdentifier
 7227.primaryIdentifier.dbref = FlyBase
-
-# worm
-6239.uniqueField = primaryIdentifier
-6239.primaryIdentifier.gene-designation = WormBase
-6239.gene-designation = gene ID
-
-# anoph
-7165.uniqueField = primaryIdentifier
-7165.primaryIdentifier.name = ORF
+7227.symbol.name = primary
 
 # people
-9606.uniqueField = symbol
+9606.uniqueField = ncbiGeneNumber
+#9606.primaryIdentifier.dbref = Ensembl
+9606.secondaryIdentifier.dbref = HGNC
+9606.ncbiGeneNumber.dbref = GeneId
 9606.symbol.name = primary
 
-# yeast
-4932.uniqueField = primaryIdentifier
-4932.primaryIdentifier.dbref = SGD
-4932.secondaryIdentifier.name = ordered locus
-4932.symbol.name = primary
-4932.strain = 559292
-
 # mouse
-10090.uniqueField = secondaryIdentifier
+10090.uniqueField = ncbiGeneNumber
+#10090.primaryIdentifier.dbref = Ensembl
 10090.secondaryIdentifier.dbref = MGI
-
-# dpse
-7237.uniqueField = primaryIdentifier
-7237.primaryIdentifier.dbref = FlyBase
-7237.strain = 46245
+10090.ncbiGeneNumber.dbref = GeneId
+10090.symbol.name = primary
 
 # rat
-10116.uniqueField = primaryIdentifier
-10116.primaryIdentifier.dbref = Ensembl
+10116.uniqueField = ncbiGeneNumber
+#10116.primaryIdentifier.dbref = Ensembl
+10116.secondaryIdentifier.dbref = RGD
+10116.ncbiGeneNumber.dbref = GeneId
+10116.symbol.name = primary
 
-# zebrafish
-7955.uniqueField = primaryIdentifier
-7955.primaryIdentifier.dbref = Ensembl
-7955.symbol.name = primary
-
-36329.uniqueField = primaryIdentifier
-36329.primaryIdentifier.name = ORF
-36329.symbol.name = primary
-
-# pseudoobscura strain
-46245.uniqueField = primaryIdentifier
-46245.primaryIdentifier.dbref = FlyBase
-# mojavensis
-7230.uniqueField = primaryIdentifier
-7230.primaryIdentifier.dbref = FlyBase
-# simulans
-7240.uniqueField = primaryIdentifier
-7240.primaryIdentifier.dbref = FlyBase
-# virilis
-7244.uniqueField = primaryIdentifier
-7244.primaryIdentifier.dbref = FlyBase
-# yakuba
-7245.uniqueField = primaryIdentifier
-7245.primaryIdentifier.dbref = FlyBase
-# ananassae
-7217.uniqueField = primaryIdentifier
-7217.primaryIdentifier.dbref = FlyBase
-# erecta
-7220.uniqueField = primaryIdentifier
-7220.primaryIdentifier.dbref = FlyBase
-# grimshawi
-7222.uniqueField = primaryIdentifier
-7222.primaryIdentifier.dbref = FlyBase
-# persimilis
-7234.uniqueField = primaryIdentifier
-7234.primaryIdentifier.dbref = FlyBase
-# sechellia
-7238.uniqueField = primaryIdentifier
-7238.primaryIdentifier.dbref = FlyBase
-# willistoni
-7260.uniqueField = primaryIdentifier
-7260.primaryIdentifier.dbref = FlyBase
-
-1392.uniqueField = primaryIdentifier
-1392.primaryIdentifier.dbref = GeneID
-1392.gene-designation = gene ID
-1392.strain = 261594
-
-# arabidopsis
-3702.uniqueField = primaryIdentifier
-3702.primaryIdentifier.gene-designation = EnsemblPlants
-3702.gene-designation = gene ID
 
 # only load protein features of these type
 # to load ALL feature types, comment out this line
