--- a/bio/webapp/resources/webapp/WEB-INF/bioClassNames.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/bioClassNames.properties
@@ -13,8 +13,9 @@ UniProtFeature=UniProt Feature
 GeneRIF=GeneRIF
 PubChemCompound=PubChem Compound
 ChebiCompound=ChEBI Compound
+ChemblCompound=ChEMBL Compound
 ScopEntry=SCOP Entry
 ScopRegion=SCOP Region
 CathClassification=CATH Classification
-#to be removed
-CompoundGroupInteraction=Protein-CompoundGroup Interaction
+ChemblInteraction=ChEMBL Interaction
+DrugBankInteraction=DrugBank Interaction
