--- a/bio/webapp/resources/webapp/WEB-INF/bioFieldNames.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/bioFieldNames.properties
@@ -30,4 +30,5 @@ pdbRegions=PDB Regions
 scopRegions=SCOP Regions
 scopClassification=SCOP Classification
 cathClassification=CATH Classification
-pubChemCid=PubChem CID45
+pubChemCid=PubChem CID
+ic50=IC50(nM)
