--- a/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
@@ -433,21 +433,21 @@ See the <a href="http://www.geneontology.org/GO.evidence.shtml">GO website for m
 # Start of Additional definitions for TargetMine
 
 # Class definitions
-Drug=Any substance that, when absorbed into the body of a living organism, alters normal bodily function.
-#ProteinHomolog=Homologous relationship from one protein (protein reference) to another (homolog). Data were made by utilizing KEGG ORTHOLOGY database. 
+DrugCompound=Any substance that, when absorbed into the body of a living organism, alters normal bodily function.
 Enzyme=Proteins that catalyze chemical reactions.
 CompoundGroup=A group of compounds from different data sources which share the same molecular skeleton.
 ChebiCompound=A compound in ChEBI database.
+ChemblCompound=A compound in ChEMBL database.
 PubChemCompound=A compound in PubChem database.
 BindingSiteInfo=Transcription factor binding site information.
 Compound=A pure chemical substance.
 CompoundGroupInteraction=An interaction between a Protein and a CompoundGroup.
 DOAnnotation=Disease Ontology annotation for a gene.
 DOTerm: A term from the Disease Ontology.
-DrugProteinInteraction=An interaction between a Protein and a Drug.
+DrugBankInteraction=An interaction between a Protein and a DrugCompound.
 DrugType=The type of a drug, could be 'Approved', 'Biotech', 'Investigational', ...etc.
 GeneRIF=A reference for DOAnnotation from a GeneRIF record.
-HetGroup=A het atom using by PDB.
+PDBCompound=A het atom using by PDB.
 ProteinChain=A chain in a protein(PDB) structure.
 ProteinDNAInteraction=An interaction between a Protein and a DNA.
 ProteinDNAExperiment=The experiment in which a protein-DNA interaction was determined.
@@ -456,27 +456,16 @@ ProteinInteraction=A protein-protein interaction.
 ProteinInteractionSource=The original data source of a protein-protein interaction.
 PDBRegion=The region of a PDB structure. 
 ProteinStructureRegion=Define the corresponding region in a Protein of a PDB structure.
+ChemblInteraction=A protein-chemical interaction from ChEMBL database.
 StitchInteraction=A protein-chemical interaction from STITCH database.
-#ScopClassification=Structural classification of proteins.
-#ScopClass=A class used in SCOP classifiaction.
-#ScopFold=A fold defined in SCOP classifiaction.
-#ScopSuperFamily=A superfamily defined in SCOP classifiaction.
-#ScopFamily=A family defined in SCOP classifiaction.
-#ScopDomain=A domain defined in SCOP classifiaction.
-#ScopSpecies=A species in SCOP classifiaction.
-#ScopProtein=A protein in SCOP classifiaction.
 ScopRegion=Define the region in a Protein of a SCOP classification.
 CathClassification=CATH is a manually curated classification of protein domain structures.
 GenomeWideAssociation=Annotations from the genome-wide association studies.
 ScopEntry=The terms used in SCOP hierarchy. Could be a Class, a Fold, a SuperFamily, a Family, a Domain, a Species or a Protein.
 StructuralDomainRegion=The regions of the annotated structural classification.
+CompoundSynonym=Alias of a Compound, including brand name or trade name.
 
 # Field definitions
-#ProteinHomolog.koNumber=KEGG ORTHOLOGY identifier
-#ProteinHomolog.type=Type of homologous relationship. Either ortholog or paralog
-#ProteinHomolog.source=Source protein. ProteinHomolog class stands for homologous relationship of this source protein.
-#ProteinHomolog.homolog=A homologous protein for a source protein
-
 ProteinInteraction=A relation between two proteins which have been shown to be related through a physical interaction.
 ProteinInteractionSource=Data source of the PPI information.
 
@@ -490,7 +479,9 @@ P = provisional - based on evidence from one laboratory or one family. <br/> \
 I = inconsistent - results of different laboratories disagree. <br/> \
 L = limbo - evidence not as strong as that provisional, but included for heuristic reasons. (Same as 'tentative'.)
 
-CompoundGroup.identifier=first 14 characters of the InChIKey
-CathClassification.cathCode=corresponds to a node in the CATH structural hierarchy
+CompoundGroup.identifier=The first 14 characters of the InChIKey
+CathClassification.cathCode=Corresponds to a node in the CATH structural hierarchy
+
+CompoundProteinInteraction.ic50=The half maximal inhibitory concentration (IC50); the unit here is nM
 
 # End of Additional definitions for TargetMine
