git-svn-id: svn://10.100.0.12/targetmine/targetmine_0_95@970 2b6e97ab-584e-0410-ac36-d0f4d4f06b57

--- a/bio/sources/targetmine/drugebility/resources/drugebility_keys.properties
+++ b/bio/sources/targetmine/drugebility/resources/drugebility_keys.properties
@@ -4,5 +4,6 @@ SOTerm.key = name, ontology
 Organism.key = taxonId
 Ontology.key = name
 Publication.key = pubMedId
-CathClassification.key_cathCode=cathCode
+ScopEntry.key = sunid
+Protein.key_primaryacc=primaryAccession
 ProteinStructure.key_pdbId = pdbId
