--- a/bio/sources/targetmine/irefindex/resources/irefindex_keys.properties
+++ b/bio/sources/targetmine/irefindex/resources/irefindex_keys.properties
@@ -5,6 +5,7 @@ DataSet.key_name= name
 DataSource.key_name = name
 Gene.key_ncbiGeneNumber = ncbiGeneNumber
 Gene.key_primaryidentifier = primaryIdentifier
+Protein.key_primaryacc=primaryAccession
 InteractionExperiment.key_name_pub_db = name, publication, sourceDb, sourceId
 Interaction.key_name_role = experiment, name, role
 OntologyTerm.key_identifier=identifier 
