--- a/bio/sources/targetmine/protein2ipr/resources/protein2ipr_keys.properties
+++ b/bio/sources/targetmine/protein2ipr/resources/protein2ipr_keys.properties
@@ -4,5 +4,5 @@ SOTerm.key = name, ontology
 Organism.key = taxonId
 Ontology.key = name
 Publication.key = pubMedId
-CathClassification.key_cathCode=cathCode
-ProteinStructure.key_pdbId = pdbId
+Protein.key_primaryacc=primaryAccession
+ProteinDomain.key_identifier=primaryIdentifier
