--- a/targetmine/dbmodel/resources/genomic_priorities.properties
+++ b/targetmine/dbmodel/resources/genomic_priorities.properties
@@ -18,6 +18,7 @@ BioEntity.organism = \
   fill-missing-proteins, \
   *, \
   go-annotation, \
+  irefindex, \
   nci-pathway
 
 Gene.primaryIdentifier = \
@@ -70,7 +71,6 @@ GOEvidenceCode.code = \
 
 ProteinDomain.primaryIdentifier = \
   interpro, \
-  ipi-ipc, \
   *
 
 OntologyTerm.ontology = \
