--- a/bio/sources/targetmine/cath-name/resources/cath-name_keys.properties
+++ b/bio/sources/targetmine/cath-name/resources/cath-name_keys.properties
@@ -5,4 +5,4 @@ Organism.key = taxonId
 Ontology.key = name
 Publication.key = pubMedId
 CathClassification.key_cathCode=cathCode
-ProteinStructure.key_pdbId = pdbId
+ProteinChain.key = identifier
