--- a/bio/sources/targetmine/drugebility/resources/drugebility_keys.properties
+++ b/bio/sources/targetmine/drugebility/resources/drugebility_keys.properties
@@ -4,6 +4,7 @@ SOTerm.key = name, ontology
 Organism.key = taxonId
 Ontology.key = name
 Publication.key = pubMedId
-ScopEntry.key = sunid
-Protein.key_primaryacc=primaryAccession
-ProteinStructure.key_pdbId = pdbId
+#Protein.key_primaryacc=primaryAccession
+#ProteinStructure.key_pdbId = pdbId
+ProteinChain.key = identifier
+ScopDomain.key = identifier
