--- a/bio/sources/targetmine/scop/resources/scop_keys.properties
+++ b/bio/sources/targetmine/scop/resources/scop_keys.properties
@@ -1,1 +1,8 @@
-ProteinChain.key_pdbidchain=pdbId, chain
+DataSet.key = name
+DataSource.key = name
+SOTerm.key = name, ontology
+Organism.key = taxonId
+Ontology.key = name
+Publication.key = pubMedId
+ProteinChain.key = identifier
+ScopDomain.key = identifier
