--- a/bio/sources/targetmine/sifts/resources/sifts_keys.properties
+++ b/bio/sources/targetmine/sifts/resources/sifts_keys.properties
@@ -4,6 +4,6 @@ SOTerm.key = name, ontology
 Organism.key = taxonId
 Ontology.key = name
 Publication.key = pubMedId
-#ProteinChain.key = identifier
-ProteinStructure.key_pdbId = pdbId
-ScopClassification.key_sunid = sunid
+Protein.key_primaryacc=primaryAccession
+ProteinChain.key = identifier
+ProteinStructure.key_pdbId=pdbId
