--- a/bio/sources/targetmine/scop/resources/scop_keys.properties
+++ b/bio/sources/targetmine/scop/resources/scop_keys.properties
@@ -5,4 +5,4 @@ Organism.key = taxonId
 Ontology.key = name
 Publication.key = pubMedId
 ProteinChain.key = identifier
-ScopDomain.key = identifier
+ScopClassification.key_sunid = sunid
