fix the package name of fugue parser
git-svn-id: svn://10.100.0.12/targetmine/targetmine_0_95@975 2b6e97ab-584e-0410-ac36-d0f4d4f06b57

--- a/bio/sources/targetmine/fugue/project.properties
+++ b/bio/sources/targetmine/fugue/project.properties
@@ -5,4 +5,4 @@ compile.dependencies = intermine/objectstore/main,\
 have.file.custom.tgt = true
 # target.model passed in by caller
 
-converter.class = jp.go.nibio.targetmine.dataconversion.FugueConverter
+converter.class = org.intermine.bio.dataconversion.FugueConverter
