--- a/bio/sources/targetmine/gene-info/resources/gene-info_keys.properties
+++ b/bio/sources/targetmine/gene-info/resources/gene-info_keys.properties
@@ -7,3 +7,4 @@ Gene.key_primaryidentifier = primaryIdentifier
 OntologyTerm.key_identifier=identifier 
 OntologyTerm.key_name_ontology=name, ontology 
 Ontology.key_title=name 
+Chromosome.key=primaryIdentifier, organism
