--- a/bio/sources/targetmine/mirbase/resources/mirbase_keys.properties
+++ b/bio/sources/targetmine/mirbase/resources/mirbase_keys.properties
@@ -5,4 +5,4 @@ Organism.key = taxonId
 Ontology.key = name
 Publication.key = pubMedId
 Gene.key_ncbiGeneId = ncbiGeneId
-MicroRNA.key = secondaryIdentifier  
+MiRNA.key = primaryIdentifier  
