--- a/bio/sources/targetmine/mirtarbase/resources/mirtarbase_keys.properties
+++ b/bio/sources/targetmine/mirtarbase/resources/mirtarbase_keys.properties
@@ -4,3 +4,5 @@ SOTerm.key = name, ontology
 Organism.key = taxonId
 Ontology.key = name
 Publication.key = pubMedId
+MiRNA.key = primaryIdentifier
+Gene.key_ncbiGeneId = ncbiGeneId
