--- a/bio/sources/biogrid/resources/biogrid_keys.properties
+++ b/bio/sources/biogrid/resources/biogrid_keys.properties
@@ -1,7 +1,5 @@
 DataSet.key_title=name
 DataSource.key_name=name
-Gene.key_primaryidentifier=primaryIdentifier
-Gene.key_symbol_org=symbol, organism
 InteractionExperiment.key_name_pub=name, publication
 Interaction.key_interaction=gene1, gene2
 InteractionTerm.key_name=name
@@ -11,3 +9,4 @@ OntologyTerm.key_name_ontology=name, ontology
 Organism.key_taxonid=taxonId
 Publication.key_pubmed=pubMedId
 Gene.key_ncbiGeneId=ncbiGeneId
+SOTerm.key = name, ontology
