--- a/bio/sources/targetmine/enzyme-pathway/resources/enzyme-pathway_keys.properties
+++ b/bio/sources/targetmine/enzyme-pathway/resources/enzyme-pathway_keys.properties
@@ -2,3 +2,5 @@ Enzyme.key_ecNumber=ecNumber
 Pathway.key_identifier=identifier
 DataSet.key_name = name
 DataSource.key_name = name
+Ontology.key=name 
+SOTerm.key = name, ontology
