--- a/bio/sources/targetmine/do-annotation/resources/do-annotation_keys.properties
+++ b/bio/sources/targetmine/do-annotation/resources/do-annotation_keys.properties
@@ -1,3 +1,9 @@
 Publication.key_pubmed = pubMedId
 Gene.key_ncbiGeneId = ncbiGeneId
 OntologyTerm.key_identifier=identifier
+DataSet.key = name
+DataSource.key = name
+SOTerm.key = name, ontology
+Organism.key = taxonId
+Ontology.key = name
+
