--- a/bio/sources/targetmine/enzyme/resources/enzyme_keys.properties
+++ b/bio/sources/targetmine/enzyme/resources/enzyme_keys.properties
@@ -3,3 +3,5 @@ Enzyme.key_ecNumber=ecNumber
 DataSet.key_name = name
 DataSource.key_name = name
 Synonym.key_synonym = subject, value
+Ontology.key=name 
+SOTerm.key = name, ontology
