--- a/bio/sources/targetmine/gene-info/resources/gene-info_keys.properties
+++ b/bio/sources/targetmine/gene-info/resources/gene-info_keys.properties
@@ -8,3 +8,4 @@ OntologyTerm.key_identifier=identifier
 OntologyTerm.key_name_ontology=name, ontology 
 Ontology.key_title=name 
 Chromosome.key=primaryIdentifier, organism
+SOTerm.key = name, ontology
