Fix the Error Correction calculation (2 mistakes); Modify default options of enrichment widget by pointing the javascript to a local one; Edit the descriptions of TargetMine specific Classes and Fields;  Update the release information; Move the javascript folder.

--- a/bio/webapp/resources/webapp/WEB-INF/bioFieldNames.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/bioFieldNames.properties
@@ -25,3 +25,12 @@ uniprotAccession=UniProt Accession
 uniprotName=UniProt Name
 url=URL
 UTRs=UTRs
+# TargetMine
+scopClassification=SCOP Classification
+cathClassification=CATH Classification
+pubChemCid=PubChem CID
+ic50=IC50(nM)
+cathCode=CATH Code
+ncbiGeneId=NCBI Gene ID
+miRNA=miRNA
+microRNAs=microRNAs
