--- a/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
@@ -429,3 +429,65 @@ The possibilities are:<p>\
 <p>\
 See the <a href="http://www.geneontology.org/GO.evidence.shtml">GO website for more details</a>
 
+# Start of Additional definitions for TargetMine
+
+# Class definitions
+BindingSiteInfo=Transcription factor binding site information.
+CathClassification=CATH is a manually curated classification of protein domain structures.
+ChebiCompound=A compound in ChEBI database.
+ChemblCompound=A compound in ChEMBL database.
+ChemblAssay=An assay in ChEMBL database.
+ChemblInteraction=A protein-chemical interaction from ChEMBL database.
+Compound=A pure chemical substance.
+CompoundGroup=A group of compounds from different data sources which share the same molecular skeleton.
+CompoundProteinInteraction=An interaction between a Protein and a Compound.
+CompoundProteinInteractionAssay=An assay which support the protein-compound interaction.
+CompoundSynonym=Alias of a Compound, including brand name or trade name.
+DOAnnotation=Disease Ontology annotation for a gene.
+DOTerm: A term from the Disease Ontology.
+DrugBankInteraction=An interaction between a Protein and a DrugCompound.
+DrugCompound=Any substance that, when absorbed into the body of a living organism, alters normal bodily function.
+DrugType=The type of a drug, could be 'Approved', 'Biotech', 'Investigational', ...etc.
+Druggability=A structure-based druggability scores annotated by ChEMBL-DrugEBIlity.
+Enzyme=Proteins that catalyze chemical reactions.
+GeneRIF=A reference for DOAnnotation from a GeneRIF record.
+GenomeWideAssociation=Annotations from the genome-wide association studies.
+MacroMolecularStructure=Structure of a macro mulecular.
+MiRNAInteraction=An association of a microRNA and the targeting gene.
+MiRNAExperiment=An experiment or platform which the MiRNAInteraction is defined.
+MiRNAPrimaryTranscript=A pre-microRNA transcript which further forms the mature microRNA.
+PDBCompound=A small molecule in the PDB structure.
+PDBInteraction=A Protein-compound interaction found in a PDB structure.
+# PDBRegion=The region of a PDB structure. 
+ProteinChain=A chain in a protein(PDB) structure.
+ProteinDNAExperiment=The experiment in which a protein-DNA interaction was determined.
+ProteinDNAInteraction=An interaction between a Protein and a DNA.
+ProteinDomainRegion=Define the region in a Protein of certain domain.
+ProteinInteraction=A relation between two proteins which have been shown to be related through a physical interaction.
+ProteinInteractionSource=The original data source of a protein-protein interaction.
+ProteinStructureRegion=Define the corresponding region in a Protein of a PDB structure.
+PubChemCompound=A compound in PubChem database.
+ScopClassification=Structural Classification of Proteins
+# ScopEntry=The terms used in SCOP hierarchy. Could be a Class, a Fold, a SuperFamily, a Family, a Domain, a Species or a Protein.
+# ScopRegion=Define the region in a Protein of a SCOP classification.
+StitchInteraction=A protein-chemical interaction from STITCH database.
+StructuralDomainRegion=A region of the protein for structural classification annotations.
+StructuralRegion=A region of the protein structure for the protein structural classification.
+
+
+# Field definitions
+Gene.primaryIdentifier=The main identifier. In TargetMine, it equals to Ensembl id.
+Gene.secondaryIdentifier=The identifier, other than the primary identifier, which is commonly used to identify a gene for specific organism. \
+In TargetMine, HGNC id for human; RGD for rat; MGI for mouse. 
+Gene.ncbiGeneId=Entrez Gene identifier.
+
+CompoundGroup.identifier=The first 14 characters of the InChIKey for the compound.
+CathClassification.cathCode=Corresponds to a node in the CATH structural hierarchy.
+StructuralClassification.type=Source of the structural classification; either CATH or SCOP.
+StructuralClassification.level=The hierarchy in the structural classification. \
+CATH: Class, Architecture, Topology, Homologous Superfamily, Domain; \
+SCOP: Class, Fold, Superfamily, Family, Protein, Species, Domain;
+
+CompoundProteinInteraction.ic50=The half maximal inhibitory concentration (IC50); the unit here is nM
+
+# End of Additional definitions for TargetMine
