--- a/bio/webapp/resources/webapp/WEB-INF/bioClassNames.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/bioClassNames.properties
@@ -10,3 +10,18 @@ RNAiResult=RNAi Result
 RNAiScreenHit=RNAi Screen Hit
 RNAiScreen=RNAi Screen
 UniProtFeature=UniProt Feature
+# TargetMine
+CathClassification=CATH Classification
+ChebiCompound=ChEBI Compound
+ChemblAssay=ChEMBL Assay
+ChemblCompound=ChEMBL Compound
+ChemblInteraction=ChEMBL Interaction
+DrugBankInteraction=DrugBank Interaction
+GeneRIF=GeneRIF
+MiRNAExperiment=miRNA Experiment
+MiRNAInteraction=miRNA Interaction
+PDBCompound=PDB Compound
+PDBInteraction=PDB Interaction
+PubChemCompound=PubChem Compound
+ScopClassification=SCOP Classification
+StitchInteraction=STITCH Interaction
