--- a/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
@@ -490,4 +490,9 @@ SCOP: Class, Fold, Superfamily, Family, Protein, Species, Domain;
 
 CompoundProteinInteraction.ic50=The half maximal inhibitory concentration (IC50); the unit here is nM
 
+Druggability.ensembl=The average of druggability score calculated under different models. Ranging from -1.0 (undruggable) to +1.0 (Druggable).
+Druggability.tractable=Similar to druggable but under more relaxed conditions.
+Druggability.druggable=Evaluated by the suitability of the binding site for small molecules under the Lipinski's Rule of Five.
+Druggability.primaryIdentifier=A domain PX identifier given by SCOP.
+
 # End of Additional definitions for TargetMine
