--- a/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
@@ -495,4 +495,14 @@ Druggability.tractable=Similar to druggable but under more relaxed conditions.
 Druggability.druggable=Evaluated by the suitability of the binding site for small molecules under the Lipinski's Rule of Five.
 Druggability.primaryIdentifier=A domain PX identifier given by SCOP.
 
+Interaction.confidence=Physical interaction with more than 1 experiment method or \
+more than 1 publication is annotated as HC(high confident). \
+If the high confident interaction contains at least 1 direct interacting evidence, \
+the interaction is further labeled with HCDP. HCDP is a subset of HC.
+
+NetworkProperty.isBottleneck=Top 10% of betweenness centrality is defined as the bottleneck nodes.
+NetworkProperty.isHub=Top 10% of node degree is defined as the hub node.
+NetworkProperty.networkType=Could be HCLCC(high confident largest connected component) or \
+HCDPLCC(high confident direct physical largest connected component)
+
 # End of Additional definitions for TargetMine
