add the class description for NetworkProperty

--- a/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
@@ -473,6 +473,7 @@ ScopClassification=Structural Classification of Proteins
 StitchInteraction=A protein-chemical interaction from STITCH database.
 StructuralDomainRegion=A region of the protein for structural classification annotations.
 StructuralRegion=A region of the protein structure for the protein structural classification.
+NetworkProperty=Network topology analysis for high confident direct physical PPI network.
 
 
 # Field definitions
@@ -502,7 +503,6 @@ the interaction is further labeled with HCDP. HCDP is a subset of HC.
 
 NetworkProperty.isBottleneck=Top 10% of betweenness centrality is defined as the bottleneck nodes.
 NetworkProperty.isHub=Top 10% of node degree is defined as the hub node.
-NetworkProperty.networkType=Could be HCLCC(high confident largest connected component) or \
-HCDPLCC(high confident direct physical largest connected component)
+NetworkProperty.networkType=HCDPLCC stands for High Confident Direct Physical Largest Connected Component.
 
 # End of Additional definitions for TargetMine
