--- a/bio/sources/targetmine/gene-info/main/resources/gene-info_config.properties
+++ b/bio/sources/targetmine/gene-info/main/resources/gene-info_config.properties
@@ -1,10 +1,8 @@
-7227.primaryIdentifier = FLYBASE
-
-9606.primaryIdentifier = Ensembl
+#9606.primaryIdentifier = Ensembl
 9606.secondaryIdentifier = HGNC
 
-10090.primaryIdentifier = Ensembl
+#10090.primaryIdentifier = Ensembl
 10090.secondaryIdentifier = MGI
 
-10116.primaryIdentifier = Ensembl
+#10116.primaryIdentifier = Ensembl
 10116.secondaryIdentifier = RGD
